<resources>
    <string name="app_name">Book Store App</string>
    <string name="empty_view_title_text">Oops... no books!</string>
    <string name="empty_view_subtitle_text">Add first book to the database</string>
    <string name="label_book_details">Details</string>
    <string name="stock_info">Stock</string>
    <string name="book_info">Book</string>
    <string name="details">Details</string>
    <string name="edit_book">Edit</string>
    <string name="btn_sell_1">Sell book</string>
    <string name="decr">-1</string>
    <string name="incr">+1</string>
    <string name="book_sold">Book sold. Thanks.</string>
    <string name="book_not_sold">0 in stock. \nOrder from publisher.</string>
    <string name="quantity_increased">Quantity increased.</string>
    <string name="quantity_decreased">Quantity decreased.</string>
    <string name="quantity_not_decreased">Could not update the quantity. \nYou have 0 books already.</string>
    <string name="book_added">Added. Thanks.</string>
    <string name="quantity_not_increased">Do not add more than 100.</string>
    <string name="order_call">Order</string>
    <string name="delete_from_detailed_view">Delete</string>
    <string name="order_btn">Order</string>
    <string name="action_insert_dummy_book_data">Insert dummy data</string>
    <string name="action_delete_all_books">Delete all books (oh no!)</string>
    <string name="editor_activity_title_new_book">Add new book</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="publication_date">Publication date: &#032;</string>
    <string name="category_overview">Book overview</string>
    <string name="category_cover">Cover</string>
    <string name="category_publisher">Publisher</string>
    <string name="category_publisher_phone_number">Phone</string>
    <string name="edit_phone_number">Publisher phone number</string>
    <string name="hint_book_title">Title (required)</string>
    <string name="hint_book_author">Author (required)</string>
    <string name="hint_book_price">Price (required)</string>
    <string name="hint_book_year">Publication date</string>
    <string name="hint_book_publisher">Publisher</string>
    <string name="hint_book_pages">Number of pages</string>
    <string name="cover_unknown">unknown</string>
    <string name="cover_hard">hardcover</string>
    <string name="cover_soft">softcover</string>
    <string name="hint_book_quantity">Quantity (required)</string>
    <string name="unknown_values">N/A</string>
    <string name="year_unknown">(Year N/A)</string>
    <string name="publisher_unknown">(Publisher N/A)</string>
    <string name="pages_unknown">(pages N/A)</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="missing_title">Book Title is required.</string>
    <string name="missing_author">Book Author is required.</string>
    <string name="missing_price">Price is required.</string>
    <string name="missing_quantity">Quantity is required.</string>
    <string name="discard">Discard changes</string>
    <string name="leave_editor">Leave</string>
    <string name="keep_editing">Keep editing</string>
    <string name="edit_missing_fields">Edit</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="publisher">Publisher</string>
    <string name="pages">Pages</string>
    <string name="quantity">Quantity</string>
    <string name="cover">Cover</string>
    <string name="price">Price</string>
    <string name="stock">In stock</string>
    <string name="phone">Phone</string>
</resources>